# ship-loop

./: .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: final-review.md  resume.md  status-server.md  ticket-loop.md  workspace-mode.md
schemas/: audit-repair-result.schema.json  audit-result.schema.json  review-result.schema.json  run-event.schema.json  run-state.schema.json  ticket-result.schema.json
scripts/: extract_tickets.py  render_prompt.py  run_final_review.py  run_ticket_loop.py  ship_loop_config.py  ship_loop_state.py  status_page_template.html
shiploop_cli/: app.py  app.tcss  backend.py  cli.py  discovery.py  rendering.py
tests/: test_ship_loop_config.py  test_shiploop_app.py  test_shiploop_cli.py  test_shiploop_discovery.py  test_shiploop_rendering.py
